file path in the URL object updated. Initial context env props value updated